v0.10/_sources/examples/Radar_Server_Level_3.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/Radar_Server_Level_3.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_Radar_Server_Level_3.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_Radar_Server_Level_3.py:


=======================
TDS Radar Query Service
=======================

Use Siphon to get NEXRAD Level 3 data from a TDS.

.. GENERATED FROM PYTHON SOURCE LINES 11-19

.. code-block:: Python

    from datetime import datetime, timezone

    import matplotlib.pyplot as plt
    import numpy as np

    from siphon.cdmr import Dataset
    from siphon.radarserver import get_radarserver_datasets, RadarServer








.. GENERATED FROM PYTHON SOURCE LINES 20-22

First, point to the top-level thredds radar server accessor to find what datasets are
available.

.. GENERATED FROM PYTHON SOURCE LINES 22-25

.. code-block:: Python

    ds = get_radarserver_datasets('http://thredds.ucar.edu/thredds/')
    print(list(ds))





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    ['NEXRAD Level II Radar for Case Study CCS039', 'NEXRAD Level II Radar from IDD', 'NEXRAD Level III Radar for Case Study CCS039', 'NEXRAD Level III Radar from IDD', 'TDWR Level III Radar from IDD']




.. GENERATED FROM PYTHON SOURCE LINES 26-28

Now create an instance of RadarServer to point to the appropriate
radar server access URL. This is pulled from the catalog reference url.

.. GENERATED FROM PYTHON SOURCE LINES 28-31

.. code-block:: Python

    url = ds['NEXRAD Level III Radar from IDD'].follow().catalog_url
    rs = RadarServer(url)








.. GENERATED FROM PYTHON SOURCE LINES 32-33

Look at the variables available in this dataset

.. GENERATED FROM PYTHON SOURCE LINES 33-35

.. code-block:: Python

    print(rs.variables)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    {'NBC', 'NXG', 'NVL', 'N3B', 'N3K', 'N1S', 'NAG', 'NAK', 'NYK', 'N3Q', 'N3U', 'NZQ', 'NBH', 'NZX', 'DOD', 'NTP', 'N1Q', 'NMD', 'DTA', 'NXB', 'NBB', 'DHR', 'N0R', 'N0S', 'DSP', 'N0X', 'PTA', 'N1P', 'NVW', 'NXH', 'NCR', 'N1U', 'N1H', 'NAU', 'DU6', 'NET', 'NXU', 'N3S', 'N1M', 'NZG', 'N0G', 'N2K', 'DAA', 'NXM', 'N1K', 'NAH', 'NAC', 'NZM', 'NYU', 'N0U', 'NXQ', 'NYG', 'NYC', 'EET', 'DVL', 'N1G', 'N1X', 'NYB', 'NST', 'NZB', 'N3H', 'NBM', 'DU3', 'N0V', 'NYH', 'N2Q', 'DSD', 'N0M', 'N0Q', 'N1C', 'N3M', 'N0B', 'NAX', 'N2C', 'NBQ', 'NZU', 'NBK', 'N2S', 'NZK', 'NXX', 'N2B', 'N0K', 'N0Z', 'N0C', 'NZC', 'NAQ', 'NAM', 'N2M', 'HHC', 'NYM', 'NAB', 'NYX', 'NBX', 'NXK', 'N3X', 'N2U', 'N2X', 'N2H', 'NYQ', 'N0H', 'N1B', 'DPR', 'DPA', 'OHA', 'NZH', 'N3C', 'NBU', 'NXC'}




.. GENERATED FROM PYTHON SOURCE LINES 36-40

Create a new query object to help request the data. Using the chaining
methods, ask for data from radar CYS (Cheyenne) for now for the product
N0B, which is reflectivity data for the lowest tilt. We see that when the query
is represented as a string, it shows the encoded URL.

.. GENERATED FROM PYTHON SOURCE LINES 40-43

.. code-block:: Python

    query = rs.query()
    query.stations('CYS').time(datetime.now(timezone.utc)).variables('N0B')





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    var=N0B&time=2025-01-24T20%3A05%3A55.564916%2B00%3A00&stn=CYS



.. GENERATED FROM PYTHON SOURCE LINES 44-47

We can use the RadarServer instance to check our query, to make
sure we have required parameters and that we have chosen valid
station(s) and variable(s)

.. GENERATED FROM PYTHON SOURCE LINES 47-49

.. code-block:: Python

    rs.validate_query(query)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 50-52

Make the request, which returns an instance of TDSCatalog. This
handles parsing the catalog

.. GENERATED FROM PYTHON SOURCE LINES 52-54

.. code-block:: Python

    catalog = rs.get_catalog(query)








.. GENERATED FROM PYTHON SOURCE LINES 55-57

We can look at the datasets on the catalog to see what data we found by the query. We
find one NIDS file in the return.

.. GENERATED FROM PYTHON SOURCE LINES 57-59

.. code-block:: Python

    print(catalog.datasets)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    ['Level3_CYS_N0B_20250124_2000.nids']




.. GENERATED FROM PYTHON SOURCE LINES 60-62

We can pull that dataset out of the dictionary and look at the available access URLs.
We see URLs for OPeNDAP, CDMRemote, and HTTPServer (direct download).

.. GENERATED FROM PYTHON SOURCE LINES 62-65

.. code-block:: Python

    ds = list(catalog.datasets.values())[0]
    print(ds.access_urls)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    {'OPENDAP': 'https://thredds.ucar.edu/thredds/dodsC/nexrad/level3/IDD/N0B/CYS/20250124/Level3_CYS_N0B_20250124_2000.nids', 'HTTPServer': 'https://thredds.ucar.edu/thredds/fileServer/nexrad/level3/IDD/N0B/CYS/20250124/Level3_CYS_N0B_20250124_2000.nids', 'CdmRemote': 'https://thredds.ucar.edu/thredds/cdmremote/nexrad/level3/IDD/N0B/CYS/20250124/Level3_CYS_N0B_20250124_2000.nids'}




.. GENERATED FROM PYTHON SOURCE LINES 66-67

We'll use the CDMRemote reader in Siphon and pass it the appropriate access URL.

.. GENERATED FROM PYTHON SOURCE LINES 67-69

.. code-block:: Python

    data = Dataset(ds.access_urls['CdmRemote'])








.. GENERATED FROM PYTHON SOURCE LINES 70-73

The CDMRemote reader provides an interface that is almost identical to the usual python
NetCDF interface. We pull out the variables we need for azimuth and range, as well as
the data itself.

.. GENERATED FROM PYTHON SOURCE LINES 73-77

.. code-block:: Python

    rng = data.variables['gate'][:] / 1000.
    az = data.variables['azimuth'][:]
    ref = data.variables['BaseReflectivityDR'][:]








.. GENERATED FROM PYTHON SOURCE LINES 78-80

Need to adjust range and azimuth so that they bound the range gates rather than having
a single point at the start of the gate.

.. GENERATED FROM PYTHON SOURCE LINES 80-87

.. code-block:: Python

    rng = np.append(rng, rng[-1] - rng[-2])
    diff = np.diff(az)
    diff[diff > 180] -= 360.
    diff[diff < -180] += 360.
    avg_spacing = diff.mean()
    az = np.append(az, az[-1] + avg_spacing)








.. GENERATED FROM PYTHON SOURCE LINES 88-89

Then convert the polar coordinates to Cartesian

.. GENERATED FROM PYTHON SOURCE LINES 89-93

.. code-block:: Python

    x = rng * np.sin(np.deg2rad(az))[:, None]
    y = rng * np.cos(np.deg2rad(az))[:, None]
    ref = np.ma.array(ref, mask=np.isnan(ref))








.. GENERATED FROM PYTHON SOURCE LINES 94-95

Finally, we plot them up using matplotlib.

.. GENERATED FROM PYTHON SOURCE LINES 95-101

.. code-block:: Python

    fig, ax = plt.subplots(1, 1, figsize=(9, 8))
    ax.pcolormesh(x, y, ref)
    ax.set_aspect('equal', 'datalim')
    ax.set_xlim(-460, 460)
    ax.set_ylim(-460, 460)
    plt.show()



.. image-sg:: /examples/images/sphx_glr_Radar_Server_Level_3_001.png
   :alt: Radar Server Level 3
   :srcset: /examples/images/sphx_glr_Radar_Server_Level_3_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 2.492 seconds)


.. _sphx_glr_download_examples_Radar_Server_Level_3.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: Radar_Server_Level_3.ipynb <Radar_Server_Level_3.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: Radar_Server_Level_3.py <Radar_Server_Level_3.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: Radar_Server_Level_3.zip <Radar_Server_Level_3.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
